Training profile needed to register
